[package]
name = "las"
version = "0.8.5"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Read and write point clouds stored in the ASPRS las file format."
documentation = "https://docs.rs/las"
homepage = "https://github.com/gadomski/las-rs"
repository = "https://github.com/gadomski/las-rs"
readme = "README.md"
keywords = ["lidar", "pointcloud", "las", "gis", "ASPRS"]
license = "MIT"
categories = ["science", "data-structures"]
edition = "2021"

[dependencies]
byteorder = "1.4"
chrono = "0.4"
log = "0.4"
num-traits = "0.2"
thiserror = "1.0"
uuid = "1"
laz = { version = "0.9.1", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
laz = ["dep:laz"]
laz-parallel = ["dep:laz", "laz/parallel"]

[[bench]]
name = "roundtrip"
harness = false
